Fix import coco_tree bug

--- a/dataset_comparison.ipynb
+++ b/dataset_comparison.ipynb
@@ -627,6 +627,28 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<function datasets.create_COCO_tree.create_coco_tree(root, directory)>"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets.create_COCO_tree import create_coco_tree\n",
+    "\n",
+    "create_coco_tree"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
