--- a/notebooks/cov-matrix.ipynb
+++ b/notebooks/cov-matrix.ipynb
@@ -59,38 +59,51 @@
     },
     {
      "data": {
-      "text/plain": "(10, 1024)"
+      "text/plain": "(1586, 1024)"
      },
-     "execution_count": 24,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = 'DOTA_train'\n",
-    "\n",
     "class_features = {}\n",
     "\n",
-    "classes = os.listdir(os.path.join('../class_features', dataset))\n",
+    "classes = os.listdir('../DOTA_train')\n",
     "for c in classes:\n",
     "    class_features[int(c)] = []\n",
-    "    for i in range(10):\n",
-    "        with open(os.path.join('../class_features', dataset, c, str(i) + '.pkl'), 'rb') as f:\n",
-    "            image_f = pickle.load(f)\n",
-    "        class_features[int(c)].append(image_f.squeeze().cpu().numpy())\n",
+    "    image_features = torch.load(os.path.join('../DOTA_train', c, c + '.pth'))\n",
+    "    for img_f in image_features:\n",
+    "        class_features[int(c)].append(img_f.squeeze().cpu().numpy())\n",
     "    class_features[int(c)] = np.array(class_features[int(c)])\n",
     "\n",
     "print(class_features.keys())\n",
-    "class_features[0].shape"
+    "class_features[11].shape"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T15:06:02.401713463Z",
-     "start_time": "2024-01-18T15:06:02.357356909Z"
+     "end_time": "2024-01-24T10:59:00.158995279Z",
+     "start_time": "2024-01-24T10:58:28.566046601Z"
     }
    },
-   "execution_count": 24
+   "execution_count": 59
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "bgmm_dict = {}\n",
+    "\n",
+    "classes = list(map(int, os.listdir('../DOTA_train')))\n",
+    "for c in tqdm(classes):\n",
+    "    bgmm = BayesianGaussianMixture()\n",
+    "    bgmm.fit(class_features[c])\n",
+    "    bgmm_dict[c] = bgmm"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -99,20 +112,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16/16 [00:03<00:00,  4.71it/s]\n",
-      "100%|██████████| 16/16 [00:03<00:00,  4.91it/s]\n"
+      "100%|██████████| 16/16 [00:03<00:00,  5.13it/s]\n"
      ]
     }
    ],
    "source": [
-    "bgmm_dict = {}\n",
-    "\n",
-    "classes = list(map(int, os.listdir(os.path.join('../class_features', dataset))))\n",
-    "for c in tqdm(classes):\n",
-    "    bgmm = BayesianGaussianMixture()\n",
-    "    bgmm.fit(class_features[c])\n",
-    "    bgmm_dict[c] = bgmm\n",
-    "\n",
     "n = len(classes)\n",
     "heatmap = np.zeros((n, n))\n",
     "\n",
@@ -128,82 +132,16 @@
     "        try:\n",
     "            heatmap[i, j] = KL_divergence(mean1, mean2, covariance2, precision1, precision2)\n",
     "        except torch._C._LinAlgError:\n",
-    "            heatmap[i, j] = np.nan\n",
-    "\n"
+    "            heatmap[i, j] = np.nan"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T15:20:32.643716593Z",
-     "start_time": "2024-01-18T15:20:25.974950547Z"
+     "end_time": "2024-01-24T11:13:43.166940749Z",
+     "start_time": "2024-01-24T11:13:40.006633053Z"
     }
    },
-   "execution_count": 46
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "0 plane,\n",
-    "1 ship,\n",
-    "2 storage tank,\n",
-    "3 baseball diamond,\n",
-    "4 tennis court,\n",
-    "5 basketball court,\n",
-    "6 ground track field,\n",
-    "7 harbor, \n",
-    "8 bridge,\n",
-    "9 large vehicle,\n",
-    "10 small vehicle,\n",
-    "11 helicopter, \n",
-    "12 roundabout,\n",
-    "13 soccer ball field,\n",
-    "14 swimming pool \n",
-    "15 container crane"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "heatmap = (heatmap - np.min(heatmap)) / (np.max(heatmap) - np.min(heatmap))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-18T15:35:18.507276190Z",
-     "start_time": "2024-01-18T15:35:18.446543899Z"
-    }
-   },
-   "execution_count": 53
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7f8fb11a7d10>"
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%matplotlib qt\n",
-    "plt.imshow(heatmap)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-18T15:35:20.459949516Z",
-     "start_time": "2024-01-18T15:35:20.458082988Z"
-    }
-   },
-   "execution_count": 54
+   "execution_count": 74
   },
   {
    "cell_type": "code",
