--- a/notebooks/distances.ipynb
+++ b/notebooks/distances.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-15T14:59:08.614019026Z",
-     "start_time": "2024-02-15T14:59:08.573276937Z"
+     "end_time": "2024-02-29T09:24:51.491801239Z",
+     "start_time": "2024-02-29T09:24:49.643231059Z"
     }
    },
    "outputs": [],
@@ -2091,11 +2091,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-15T15:53:46.020053168Z",
-     "start_time": "2024-02-15T15:53:45.952042485Z"
+     "end_time": "2024-02-29T09:25:11.326690789Z",
+     "start_time": "2024-02-29T09:25:11.225171806Z"
     }
    },
-   "execution_count": 104
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -2104,7 +2104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16/16 [00:35<00:00,  2.20s/it]\n"
+      "100%|██████████| 16/16 [00:40<00:00,  2.54s/it]\n"
      ]
     }
    ],
@@ -2125,11 +2125,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-15T15:54:21.726347470Z",
-     "start_time": "2024-02-15T15:53:46.518636824Z"
+     "end_time": "2024-02-29T09:25:54.155175129Z",
+     "start_time": "2024-02-29T09:25:13.534948688Z"
     }
    },
-   "execution_count": 105
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -2861,6 +2861,176 @@
     }
    },
    "execution_count": 103
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "dataset = 'DIOR'\n",
+    "classes = os.listdir(os.path.join('../class_features', dataset))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "mean_dict = {}\n",
+    "features_dict = {}\n",
+    "for c in tqdm.tqdm(classes):\n",
+    "    class_features = []\n",
+    "    mean = torch.load(os.path.join('../COCO_train', c, 'mean.pth'))\n",
+    "    mean_dict[c] = mean.cpu().numpy()\n",
+    "\n",
+    "    image_features = torch.load(os.path.join('../COCO_train', c, 'features.pth'))\n",
+    "\n",
+    "    for i, img_f in enumerate(image_features):\n",
+    "        class_features.append(img_f.squeeze().cpu().numpy())\n",
+    "    features_dict[c] = np.array(class_features)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "features_dict['15'].shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "concentration_dict = {}\n",
+    "for c in tqdm.tqdm(classes):\n",
+    "    concentration_dict[c] = 1 / features_dict[c].shape[0] * (((features_dict[c] - mean_dict[c]) ** 2).sum()) ** 0.5"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "concentration_dict"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "concentration_dict = normalize_dict_values(concentration_dict)\n",
+    "concentration_dict"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "plt.bar(concentration_dict.keys(), concentration_dict.values())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "distances = np.zeros((len(classes), len(classes)))\n",
+    "for ci in classes:\n",
+    "    for cj in classes:\n",
+    "        distances[int(ci), int(cj)] = (((mean_dict[ci] - mean_dict[cj]) ** 2).sum()) ** 0.5"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "distances = distances / distances.max()\n",
+    "distances"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 10)\n",
+    "im = ax.imshow(distances)\n",
+    "\n",
+    "ax.set_xticks(np.arange(len(classes)))\n",
+    "ax.set_yticks(np.arange(len(classes)))\n",
+    "\n",
+    "plt.setp(ax.get_xticklabels(), rotation=45, ha=\"right\",\n",
+    "         rotation_mode=\"anchor\")\n",
+    "\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "clustering_matrix = np.zeros((len(classes), len(classes)))\n",
+    "for ci in classes:\n",
+    "    for cj in classes:\n",
+    "        if ci == cj:\n",
+    "            clustering_matrix[int(ci), int(cj)] = 0\n",
+    "        else:\n",
+    "            clustering_matrix[int(ci), int(cj)] = (concentration_dict[ci] + concentration_dict[cj]) / distances[\n",
+    "                int(ci), int(cj)]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "clustering = {}\n",
+    "for c in classes:\n",
+    "    clustering[c] = max(clustering_matrix[int(c)])\n",
+    "plt.bar(clustering.keys(), clustering.values())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "db = np.array(list(clustering.values())).sum() / len(classes)\n",
+    "db"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
